--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
         <div class="page-title">
-            <h2>angular-google-maps: <span ng-cloak>{{version}}</span>, google-maps: <span ng-cloak>{{googleVersion}}</span></h2>
+            <h2>GeoSpatial Querying with Couchbase Server 4.0</h2>
         </div>
         <button class="btn btn-danger" ng-click="removeMarkers()">Clear Map</button>
         <button class="btn btn-success" ng-click="refreshMap()">Refresh Map</button>
