Added button's and Levi's location documents

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
             </div>
         </div>
         <button class="btn btn-danger" ng-click="removeMarkers()">Clear Map</button>
-        <button class="btn btn-success" ng-click="refreshMap()">Refresh Map</button>
+        <button class="btn btn-success" ng-click="refreshMap()">Show Me London!</button>
+        <button class="btn btn-success" ng-click="refreshMapCA()">Show Me Levi's!</button>
         <button class="btn btn-success" ng-click="findEventsWithDate()">Get Events</button>
         Show Map: <input type="checkbox" text="Show / Hide Map" ng-model="map.show">
     </div>
