Fixed open range checking on date.

--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,7 @@
                                 <th>Venue</th>
                                 <th>Type</th>
                                 <th>Price</th>
+                                <th>When</th>
                                 <th>Transport</th>
                             </tr>
                             </thead>
@@ -152,6 +153,7 @@
                                 <td>{{row.value.venue}}</td>
                                 <td>{{row.value.type}}</td>
                                 <td>{{row.value.price}}</td>
+                                <td>{{row.value.showtimes}}</td>
                                 <td>{{row.value.transport}}</td>
                             </tr>
                             </tbody>
