Pushing fonts (Bower does not pull them in) and edited lodash to work with `bower install`. Updated Readme.

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
 -->
-<script src='bower_components/lodash/dist/lodash.underscore.js'></script>
+<script src='bower_components/lodash/lodash.js'></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
 <!--
